# Online-ASP

./: CMakeLists.txt  FindRE2C.cmake  Makefile  README  TODO  init.sh  mingw.cmake  pch.cmake
app/: CMakeLists.txt  Makefile  clasp_main.h  clingo_options.cpp  clingo_options.h  gringo_app.cpp  gringo_app.h  main.cpp  oclingo_app.cpp  oclingo_app.h  options.cpp  options.h  timer.cpp  timer.h
app/program_opts/: program_options.cpp  program_options.h  value.h
doc/: Doxyfile
doc/documentation/: appendix.tex  bibtex.bib  paper.tex
examples/: 3colorability.lp  aggregates.lp  aggregates_test.gringo  blocks.gringo  disjunctive.lp  eternity.lp  functionsymbols.lp  multipleargs.lp  parsertest.lp  queens.gringo  queens3.gringo  queens3.lp  rangeterms.lp
examples/incremental/: blocks.lp  blocks_no.lp  eternity.lp  queens.lp  queens_no.lp  test2_no.lp  test3.lp
examples/incremental/blocksworld/: bw.lp
examples/incremental/blocksworld2/: blocks.lp
examples/incremental/queens/: queens.lp  queens_no.lp
examples/incremental/ricochetrobots/: board16-1.lp  board5.lp  optrob.lp  robots1.lp  robots2.lp
examples/incremental/sokoban/: sokoban.lp  sokoban_back.lp
examples/incremental/sokoban2/: sokoban.lp
examples/incremental/solitaire/: solitaire.lp  solitaire_para.lp
examples/incremental/tests/: test1.lp  test2.lp  test2_no.lp  test3.lp
examples/incremental/towersofhanoi/: toh.lp  toh_back.lp
examples/incremental/towersofhanoi/instances/: toh_33.lp  toh_34.lp  toh_36.lp  toh_39.lp  toh_41.lp
examples/online/: controller.py
examples/online/blocksworld/: online.lp
examples/online/elevator/: building.lp  elevator.lp  online.lp  online2.lp
examples/online/sensor/: online.lp  online2.lp  online3.lp  room.lp  room2.lp  sensor.lp
examples/online/technical1/: online.lp  technical.lp
examples/online/tictactoe/: online.lp  online2.lp  online3.lp  tictactoe.lp
examples/online/wumpus/: online.lp  online2.lp  online3.lp  world.lp  world2.lp  wumpus.lp
lib/: CMakeLists.txt  Makefile
lib/clasp/: Makefile
lib/clasp/include/: heuristics.h  preprocessor.h  program_builder.h  smodels_constraints.h  solve_algorithms.h  solver.h  unfounded_check.h
lib/clasp/include/util/: pod_vector.h
lib/clasp/src/: Makefile  clause.cpp  heuristics.cpp  preprocessor.cpp  program_builder.cpp  program_rule.cpp  satelite.cpp  smodels_constraints.cpp  solve_algorithms.cpp  solver.cpp  unfounded_check.cpp
lib/gringo/: CMakeLists.txt  Makefile
lib/gringo/include/: aggregateliteral.h  assignmentliteral.h  basicprogramevaluator.h  bindersplitter.h  claspoutput.h  computeliteral.h  conditionalliteral.h  conjunctionaggregate.h  constant.h  countaggregate.h  dependencygraph.h  dependencyrelation.h  disjunctionaggregate.h  dlvgrounder.h  domain.h  evaluator.h  expandable.h  funcsymbol.h  funcsymbolterm.h  functionterm.h  globalstorage.h  gringo.h  gringo.h.in  gringoexception.h  gringooutput.h  gringoparser.h  groundable.h  grounder.h  indexeddomain.h  literal.h  literaldependencygraph.h  literalstatement.h  lparseconverter.h  lparselexer.h  lparseoutput.h  lparseparser.h  maxaggregate.h  minaggregate.h  multipleargsterm.h  node.h  (+25 more)
lib/gringo/src/: Makefile  aggregateliteral.cpp  assignmentliteral.cpp  basicprogramevaluator.cpp  bindersplitter.cpp  claspoutput.cpp  computeliteral.cpp  conditionalliteral.cpp  conjunctionaggregate.cpp  constant.cpp  countaggregate.cpp  dependencygraph.cpp  disjunctionaggregate.cpp  dlvgrounder.cpp  domain.cpp  evaluator.cpp  funcsymbol.cpp  funcsymbolterm.cpp  functionterm.cpp  globalstorage.cpp  gringolexer.cpp  gringooutput.cpp  gringoparser.cpp  grounder.cpp  indexeddomain.cpp  literal.cpp  literaldependencygraph.cpp  literalstatement.cpp  lparseconverter.cpp  lparseconverter_impl.y  lparselexer.re  lparseoutput.cpp  lparseparser.cpp  lparseparser_impl.y  maxaggregate.cpp  minaggregate.cpp  multipleargsterm.cpp  node.cpp  normalrule.cpp  optimizeliteral.cpp  (+20 more)
lib/include/: aggregateliteral.h  assignmentliteral.h  basicprogramevaluator.h  conditionalliteral.h  dependencygraph.h  dlvgrounder.h  evaluator.h  expandable.h  functionterm.h  gringo.h  gringolexer.h  gringoparser.h  groundable.h  grounder.h  literal.h  lparselexer.h  lparseparser.h  node.h  normalrule.h  output.h  predicateliteral.h  printable.h  rangeliteral.h  rangeterm.h  relationliteral.h  statement.h  term.h  value.h
lib/src/: Makefile  aggregateliteral.cpp  assignmentliteral.cpp  basicprogramevaluator.cpp  conditionalliteral.cpp  dependencygraph.cpp  dlvgrounder.cpp  functionterm.cpp  gringoparser.cpp  grounder.cpp  lparselexer.re  lparseoutput.cpp  lparseparser_impl.y  node.cpp  normalrule.cpp  output.cpp  predicateliteral.cpp  printable.cpp  rangeliteral.cpp  rangeterm.cpp  relationliteral.cpp  rule.cpp  smodelsoutput.cpp  term.cpp  value.cpp
libgringo/: CMakeLists.txt
libgringo/gringo/: claspoutput.h  externalaggregate.h  externalknowledge.h  gringo.h  onlinelexer.h  onlineparser.h  output.h  smodelsconverter.h  smodelsoutput.h  value.h
libgringo/src/: claspoutput.cpp  countaggregate.cpp  externalaggregate.cpp  externalknowledge.cpp  grounder.cpp  lparselexer.r2c  lparseparser_impl.y  onlinelexer.r2c  onlineparser.cpp  onlineparser_impl.y  output.cpp  smodelsconverter.cpp  smodelsoutput.cpp
